<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PayBack</string>
    <string name="title_activity_create_transaction">Create Transaction</string>
    <string name="title_activity_resolve_transaction">Resolve Transaction</string>
    <string name="title_activity_contact">Contacts</string>
    <string name="title_activity_manage_group">Manage Group</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_statistic">Statistic</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_transaction1">Transaction Page 1</string>
    <string name="title_activity_transaction2">Transaction Page 2</string>
    <string name="title_activity_transaction3">Transaction Page 3</string>
    <string name="title_activity_transaction4">Transaction Page 4</string>
    <string name="title_activity_transaction5">Transaction Page 5</string>
    <string name="transaction1_Header">Create a Transaction</string>
    <string name="transaction1_Cost">Enter Transaction Total</string>
    <string name="transaction1_Comment">Comments</string>
    <string name="transaction1_Comment_hint">Comments (optional)</string>
    <string name="transaction2_contactSelectHeader">Contact Selection</string>
    <string name="transaction2_newContact">New Contact</string>
    <string name="transaction3_LenderShareHeader">Lender\'s Share</string>
    <string name="transaction3_LenderEven">Split Evenly</string>
    <string name="transaction3_LenderCustom">Custom Value</string>
    <string name="transaction4_BorrowersShare">Transaction allotment</string>
    <string name="transaction5_SummaryHeader">Summary</string>
    <string name="Home">Home</string>
    <string name="Next">Next</string>
    <string name="Previous">Previous</string>
    <string name="HoldReset">Hold to Reset</string>
    <string name="action_logout">logout</string>
    <string name="contactSelectHeader">Contact Selection</string>
    <string name="Done">Done</string>
    <string name="LenderShareHeader">Lender\'s Share</string>
    <string name="LenderEven">Split Evenly</string>
    <string name="LenderCustom">Custom Value</string>
    <string name="title_activity_create_contact">CreateContact</string>
    <string name="Cancel">Cancel</string>
    <string name="Add">Add</string>
    <string name="Confirm">Confirm</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lender_responsibility">Lender responsibility</string>
    <string name="specify_debt_automatically">Specify Debt Automatically</string>
    <string name="specify_debt_manually">Specify Debt Manually</string>
    <string name="title_activity_create_account">New Account</string>
    <string name="create_account_here">New user? Register here</string>
    <string name="login_here">Have an account? Login here</string>
    <string name="activity_contact_create">Enter Email Address</string>
    <string name="back">Back</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="title_activity_title">TitleActivity</string>
    <string name="title_activity_shortcuts">ShortcutsActivity</string>
    <string name="Goodbye">Goodbye</string>
    <string name="progress">Progress</string>
    <string name="Logout">Logout</string>
    <string name="save_changes">Save Changes</string>
    <string name="DeleteContact">Delete Contact</string>
    <string name="pagename">PageName</string>
    <string name="resolvetransaction_activity_title">Resolve A Transaction</string>
    <string name="developerMode">Developer Mode</string>
    <string name="remember">Remember Me?</string>
    <string name="delete_me">Delete</string>
    

</resources>
