<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activitybackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android1:clipChildren="true"
    tools:context=".Transaction3Activity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:longClickable="true"
        android:onClick="showTrans2"
        android:text="@string/Previous" />

    <Button
        android:id="@+id/tran3buttonnext"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="checktomoveontotrans4"
        android:text="@string/Next"
        android:enabled="false"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/transaction3_LenderShareHeader"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <EditText
        android1:id="@+id/lenderamount"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="200dp"
        android1:ems="10"
        android1:hint="@string/lender_responsibility"
        android1:inputType="number"
        tools:ignore="HardcodedText" >

        <requestFocus />
    </EditText>

    <RadioGroup
        android1:id="@+id/radioGroup1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_centerHorizontal="true"
        android1:layout_marginTop="50dp" >

        <RadioButton
            android1:id="@+id/radio1"
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content"
            android1:text="@string/specify_debt_automatically"
            android1:textColor="@color/White"
            android1:checked="false"
            android1:onClick="onRadioButtonClick"
             />

        <RadioButton
            android1:id="@+id/radio2"
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content"
            android1:checked="true"
            android1:text="@string/specify_debt_manually"
            android1:textColor="@color/White"
		 	android1:onClick="onRadioButtonClick"
            />

    </RadioGroup>

</RelativeLayout>