<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/activitybackground"
    android:onClick="hideSoftKeyboard"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Transaction1Activity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:max="100"
            android:progress="0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/button001"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:onClick="showMainMenu"
                android:text="@string/Previous" />

            <TextView
                android:id="@+id/progressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-20dp"
                android:text="@string/progress"
                android:textColor="@color/White" />

            <Button
                android:id="@+id/tran1buttonnext"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:enabled="false"
                android:onClick="showTrans2"
                android:text="@string/Next" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/shortcutsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/transaction1_Header"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shortcutsTitle"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/transaction1_Cost"
        android:imeOptions="actionDone"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:text="@string/transaction1_Comment"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignLeft="@+id/editText1"
        android:ems="10"
        android:hint="@string/transaction1_Comment_hint"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:lines="@integer/Int4" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/editText1" >

        <RadioButton
            android:id="@+id/radioauto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/specify_debt_automatically"
            android:textColor="@color/White" />

        <RadioButton
            android:id="@+id/radioman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/specify_debt_manually"
            android:textColor="@color/White" />
    </RadioGroup>

</RelativeLayout>