<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/activitybackground"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

<ScrollView
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/CreateTrsnB"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="30"
                android:height="80dp"
                android:minHeight="95dp"
                android:onClick="CreateTrsn"
                android:text="@string/title_activity_create_transaction" />

            <Button
                android:id="@+id/ResolveTrsnB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="18"
                android:height="85dp"
                android:minHeight="85dp"
                android:onClick="ResolveTrsn"
                android:text="@string/title_activity_resolve_transaction" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="18" >

                <Button
                    android:id="@+id/ContactB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:height="90dp"
                    android:minHeight="85dp"
                    android:minWidth="143dp"
                    android:onClick="Contact"
                    android:text="@string/title_activity_contact" />

                <Button
                    android:id="@+id/NotificationB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:height="90dp"
                    android:minHeight="85dp"
                    android:minWidth="143dp"
                    android:onClick="Notification"
                    android:text="Notifications" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="18" >

                <Button
                    android:id="@+id/SettingB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:height="90dp"
                    android:minHeight="85dp"
                    android:minWidth="143dp"
                    android:onClick="Setting"
                    android:text="@string/action_settings" />

                <Button
                    android:id="@+id/StatisticB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:height="90dp"
                    android:minHeight="85dp"
                    android:minWidth="143dp"
                    android:onClick="Statistic"
                    android:text="Statistics" />

            </LinearLayout>

            <Button
                android:id="@+id/devB"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="18"
                android:height="85dp"
                android:minHeight="85dp"
                android:onClick="MainLogout"
                android:text="@string/Logout" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
